# Wukong-robot-plus

./: .gitignore  .travis.yml  LICENSE  README.md  README_CHARACTER_VOICE.md  README_LATENCY_MONITOR.md  README_new.md  SUMMARY_NEW_FEATURES.md  pyproject.toml  requirements.txt  wukong.py
.github/: FUNDING.yml  stale.yml
.github/ISSUE_TEMPLATE/: ----.md  bug---.md
.github/workflows/: dockerimage.yml
docker/: Dockerfile  DockerfileArm
docs/: .buildinfo  AI.html  ASR.html  Brain.html  CHARACTER_VOICE_GUIDE.md  ConfigMonitor.html  Conversation.html  FEATURE_EXPANSION_PLAN.md  Player.html  README_CHARACTER_VOICE.md  README_LATENCY_MONITOR.md  TTS.html  Updater.html  config.html  constants.html  drivers.html  genindex.html  index.html  logging.html  modules.html  plugin_loader.html  plugins.html  py-modindex.html  robot.drivers.html  robot.html  robot.sdk.html  search.html  snowboy.html  statistic.html  utils.html  wukong.html
docs/_modules/: index.html  logging.html  wukong.html
docs/_sources/: AI.rst.txt  ASR.rst.txt  Brain.rst.txt  ConfigMonitor.rst.txt  Conversation.rst.txt  (+16 more)
plugins/: Camera.py  CleanCache.py  DeleteUser.py  Echo.py  Email.py  Geek.py  Gossip.py  LatencyCheck.py  ListUsers.py  LocalPlayer.py  Poem.py  RegisterVoice.py  Reminder.py  TestCharacterVoice.py  VerifyVoice.py  Volume.py
robot/: AI.py  ASR.py  BCI.py  Brain.py  CharacterVoice.py  ConfigMonitor.py  Conversation.py  LatencyMonitor.py  LifeCycleHandler.py  NLU.py  Player.py  Scheduler.py  TTS.py  Updater.py  VAD.py  config.py  constants.py  detector.py  logging.py  plugin_loader.py  statistic.py  utils.py
server/: server.py
snowboy/: snowboydecoder.py  snowboydetect.py
static/: default.yml  qa.csv  user_db.json
tools/: character_voice_config.py  make_json.py  plugin_generator.py  solr_api.py  solr_tools.py  user_manager.py
(+68 files in other folders)
